set personal intro

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Basic
-title: Vno Jekyll
-subtitle: A blog-orientation theme for Jekyll
+title: choi33
+subtitle: 生活本就枯燥，但跑起来就会有风
 welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
-description: Vno Jekyll is a port of my Ghost theme vno.
-creator: <a href="http://onev.cat">@onevcat</a>
+description: 前端学习
+creator: <a href="https://shantellechoi.github.io">前端学习</a>
 
-url: "http://vno.onevcat.com"
+url: "https://shantellechoi.github.io"
 
 permalink: /:year/:month/:title/
 
@@ -37,11 +37,11 @@ comment:
     
 # Social
 social:
-    weibo: onevcat
-    github: onevcat
-    twitter: onevcat
-    gplus: 107108267983477358170
-    mail: onev@onevcat.com
+    weibo: 
+    github: 
+    twitter: 
+    gplus: 
+    mail: 
 
 # Google Analytics
 ga:
