index page change

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: choi33
 subtitle: 生活本就枯燥，但跑起来就会有风
-welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
+welcome_message: 
 description: 前端学习
 creator: <a href="https://shantellechoi.github.io">前端学习</a>
 
